2013-06-13 Dario Rodriguez <dario@artica.es>

	* index.php: Loading jquery validate and validate functions in index page
	* include/js/jquery.ui.autocomplete.js: Changed autocomplete library for jquery 
	ui plugin.
	* include/functions_user.php: Modified functions to use new jquery autocomplete
	plugin.
	* include/styles/integria.css: Changed user autocomplete style.
	* include/js/integria_incident_search.js: Created a new function to bind 
	autocomplete feature to inputs.
	* operation/incidents/incident_detail.php,
	operation/incidents/incident_search_logic.php,
	operation/leads/lead_detail.php,
	operation/projects/people_manager.php,
	operation/projects/project_detail.php,
	operation/workorders/wo.php,
	operation/users/user_spare_workunit.php,
	operation/users/user_task_assigment.php,
	operation/inventories/inventory_detail.php,
	operation/inventories/inventory_search.php,
	operation/user_report/report_annual.php,
	operation/user_report/monthly.php,
	operation/user_report/report_full.php,
	godmode/grupos/configurar_grupo.php,
	godmode/usuarios/configurar_usuarios.php: Modified to use new autocomplete plugin.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* include/js/integria_incident_search.js: Fixed an error in JS which doesn't show
	dialogs of incident limits functions.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* operation/inventories/inventory_search.php: Fixed some JS errors.
	* include/functions_update_manager.php: Removed deprecated function jQuery.browser.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* index.php: Fixed an error loading JQuery libraries in wrong order.

2013-06-12  Dario Rodriguez <dario@artica.es>

	* include/styles/flora/flora.tabs.css: Fixed a lost style of tabs

2013-06-12  Dario Rodriguez <dario@artica.es>

	* operation/inventories/inventory_detail.php: Changed behaviour of parent object
	selector.
	* operation/incidents/incident_detail.php: Changed inventory name function now
	is in ajax/inventories.php.