@@ -791,9 +791,7 @@ if ((!$id) AND ($new_company == 0)){
 
 ?>
 
-<script type="text/javascript" src="include/js/jquery.autocomplete.js"></script>
-<script type="text/javascript" src="include/js/jquery.validate.js"></script>
-<script type="text/javascript" src="include/js/jquery.validation.functions.js"></script>
+<script type="text/javascript" src="include/js/jquery.ui.autocomplete.js"></script>
 
 <script type="text/javascript" >
 	
